--- a/code/11_dgf_donotuse.Rmd
+++ b/code/11_dgf_donotuse.Rmd
@@ -1,11 +1,13 @@
 ---
 title: "Untitled"
-author: "Felix"
+author: "KW"
 date: "8/11/2025"
 output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
+## NOTE: WAS 'Kimberly Try2_kw.Rmd', which was adapted from Felix's original
+
 knitr::opts_chunk$set(echo = TRUE)
 pacman::p_load(
   dplyr,
@@ -18,8 +20,86 @@ pacman::p_load(
 fyc <- readRDS(here::here("data_processed/fyc_processed.RDS"))
 ```  
 
+```{r empirical_model}
+
+fn_emp_model <- function(){
+  # Part 1: Fit the logistic model for the probability of a non-zero outcome
+  model_part1 <- glm(
+    formula = ind_gt0 ~ ind_tx*ind_post + ind_tx + ind_post + ind_female + HISPANX + zPCS42 + INSCOV,
+    data = fyc,
+    family = binomial(link = "logit")
+  )
+  
+  # Part 2: Fit the Gamma model for the positive outcomes only
+  sim_positive <- fyc %>% filter(ind_gt0 == 1)
+  
+  model_part2 <- glm(
+    formula = TOTEXPYY ~ ind_tx*ind_post + ind_tx + ind_post+ ind_female + HISPANX + zPCS42 + INSCOV,
+    data = sim_positive,
+    family = Gamma(link = "log")
+  )
+  
+  list <- list(
+    model_part1 = model_part1,
+    model_part2 = model_part2
+  )
+  
+  return(list)
+  
+}
+  
+emp_model <- fn_emp_model()
+
+```  
 
 ```{r}
+# get coefficients 
+# Extract coefficients
+coef_part1 <- emp_model$model_part1$coefficients
+coef_part1
+
+saveRDS(coef_part1,
+     here::here("data_processed/emp_coef_p1.RDS"))
+
+# need below? maybe later when using stochastic compoents
+
+```
+
+```{r}
+coef_part2 <- emp_model$model_part2$coefficients
+
+saveRDS(coef_part2,
+     here::here("data_processed/emp_coef_p2.RDS"))
+
+coef_part2
+```  
+
+```{r}
+sigma_part2 <- sigma(emp_model$model_part2) # residual Stddev (sigma) 6.733
+```  
+
+```{r}
+# Step 1: Reshape to wide format
+fyc_wide <- reshape(fyc,
+                   timevar = "ind_post",
+                   idvar = "DUPERSID",
+                   direction = "wide")
+
+# Step 2: Compute correlation
+cor(fyc_wide$PCS42.0, fyc_wide$PCS42.1, use = "complete.obs") #0.5223
+cor(fyc_wide$zPCS42.0, fyc_wide$zPCS42.1, use="complete.obs") #0.5223
+
+# correlation for MCS42: 
+cor(fyc_wide$MCS42.0, fyc_wide$MCS42.1, use="complete.obs")   # 0.4704
+cor(fyc_wide$zMCS42.0, fyc_wide$zMCS42.1, use="complete.obs") # 0.4704
+
+```
+
+
+```{r}
+# Updates:
+# -- 09/05 KW added INSCOV to models
+# -- 09/05: Using MCS42 instead of INSCOV I think... 
 
 # ============================
 # Two-part DiD simulator (updated)
@@ -51,11 +131,13 @@ simulate_panel_data <- function(
   p_treated = 0.5,          # treatment share (balanced by default)
   target_prob = 0.70,       # overall Pr(ind_gt0==1)
   sigma_u = 0.5,            # SD random intercept (person)
-  sigma_e = 0.3,            # residual SD for log(TOTEXPYY)
-  rho = 0.8,                # pre/post corr for PCS42
+  # sigma_e = 0.3,            # residual SD for log(TOTEXPYY)
+  sigma_e = 6.733036,
+  # rho = 0.8,                # pre/post corr for PCS42
+  rho=0.52,
   extreme_alloc = c("proportional","equal"), # spread scheme across cells (in expectation)
-  fill_zero_for_negative = TRUE,            # if TRUE, set TOTEXPYY=0 when ind_gt0==0
-  exact_positives = TRUE                     # if TRUE, hit 30% exactly (up to rounding)
+  fill_zero_for_negative = TRUE,    # if TRUE, set TOTEXPYY=0 when ind_gt0==0
+  exact_positives = TRUE           # if TRUE, hit 30% exactly (up to rounding)
 ) {
   extreme_alloc <- match.arg(extreme_alloc)
 
@@ -69,12 +151,14 @@ simulate_panel_data <- function(
   ind_tx_i     <- rbinom(n, 1, p_treated)
   ind_female_i <- rbinom(n, 1, 0.5)
   HISPANX_i    <- rbinom(n, 1, 0.2)
-  INSCOV_i     <- sample(1:3, n, replace = TRUE)
+  INSCOV_i     <- rbinom(n, 1, 0.3)
+  # INSCOV_i     <- sample(1:3, n, replace = TRUE)
 
   ind_tx     <- rep(ind_tx_i, each = T)
   ind_female <- rep(ind_female_i, each = T)
   HISPANX    <- rep(HISPANX_i, each = T)
-  INSCOV     <- factor(rep(INSCOV_i, each = T))
+  INSCOV     <- rep(INSCOV_i, each=T)
+  #INSCOV     <- factor(rep(INSCOV_i, each = T))
 
   # ----- Time-varying PCS42 with pre/post correlation -----
   Sigma <- matrix(c(1, rho, rho, 1), 2, 2)
@@ -103,17 +187,24 @@ simulate_panel_data <- function(
   n_ext <- length(idx_ext)
   extreme_flag <- integer(N); extreme_flag[idx_ext] <- 1L
 
-  # ----- Part 1: Binary outcome (calibrate to ~30% overall with extremes forced positive) -----
+  # ----- Part 1: Binary outcome (calibrate to ~70% overall with extremes forced positive) -----
   # Linear predictor WITHOUT intercept on non-extreme rows
-  lp_cov <- 0.5*ind_post + 0.7*ind_tx + 0.2*ind_female - 0.2*HISPANX + 0.1*zPCS + u
+  # lp_cov <- 0.5*ind_post + 0.7*ind_tx + 0.2*ind_female - 0.2*HISPANX + 0.2*INSCOV + 0.1*zPCS + u
+    lp_cov <- coef_part1["(Intercept)"] +
+      coef_part1["ind_post"]*ind_post + 
+      coef_part1["ind_tx"]*ind_tx + 
+      coef_part1["ind_tx:ind_post"]*(ind_post*ind_tx) +
+      coef_part1["ind_female"]*ind_female +
+      coef_part1["HISPANX"]*HISPANX + 
+      coef_part1["zPCS42"]*zPCS + 
+      coef_part1["INSCOV"]*INSCOV
 
   # Because extremes are forced positive, adjust target on the remaining rows:
   s <- n_ext / N
   target_rest <- (target_prob - s) / (1 - s)
   eps <- 1e-6
   if (!is.finite(target_rest) || target_rest <= 0 || target_rest >= 1) {
-    warning(sprintf("prop_extreme=%.3f with target_prob=%.3f => target_rest=%.3f; clamping.",
-                    prop_extreme, target_prob, target_rest))
+    warning(sprintf("prop_extreme=%.3f with target_prob=%.3f => target_rest=%.3f; clamping.", prop_extreme, target_prob, target_rest))
     target_rest <- min(max(target_rest, eps), 1 - eps)
   }
 
@@ -146,8 +237,16 @@ simulate_panel_data <- function(
   }
 
   # ----- Part 2: Continuous outcome (on positives) -----
-  lp_cont <- 7 + 0.4*ind_post + 0.6*ind_tx + 0.15*zPCS + 
-             0.2*ind_female - 0.1*HISPANX + u
+  lp_cont <- 7 + 
+    coef_part2["ind_post"]*ind_post + 
+    coef_part2["ind_tx"]*ind_tx + 
+    coef_part2["ind_tx:ind_post"]*(ind_tx*ind_post) + 
+    coef_part2["ind_female"]*ind_female + 
+    coef_part2["HISPANX"]*HISPANX + 
+    coef_part2["zPCS42"]*zPCS + 
+    coef_part2["INSCOV"]
+  # lp_cont <- 7 + 0.4*ind_post + 0.6*ind_tx - 0.15*zPCS + 
+  #            0.2*ind_female + 0.1*HISPANX + 0.2*INSCOV + u
   eps_e <- rnorm(N, 0, sigma_e)
   log_TOT <- lp_cont + eps_e
 
@@ -162,7 +261,7 @@ simulate_panel_data <- function(
     rng <- extreme_range(magnitude_level)
     TOTEXPYY[idx_ext] <- rlogunif(n_ext, rng[1], rng[2])
   }
-
+  
   tibble(
     DUPERSID = factor(ids),
     ind_post, ind_tx, ind_female, HISPANX, PCS42, INSCOV,
@@ -187,6 +286,30 @@ sim_conditions <- expand.grid(
 # Run all scenarios
 # ============================
 set.seed(20250811)
+all_sim_results_noExtreme <- vector("list", nrow(sim_conditions))
+
+for (i in seq_len(nrow(sim_conditions))) {
+  cond <- sim_conditions[i, ]
+  cat(sprintf("Sim %02d | n=%d, mag=%d, p_ext=%.02f\n",
+              i, cond$n, cond$magnitude_level, cond$prop_extreme))
+  sim_df <- simulate_panel_data(
+    n               = cond$n,
+    magnitude_level = cond$magnitude_level,
+    prop_extreme    = cond$prop_extreme,
+    p_treated       = 0.5,
+    target_prob     = 0.70,
+    extreme_alloc   = "proportional",  # or "equal"
+    fill_zero_for_negative = TRUE,
+    exact_positives = TRUE
+  )
+  sim_df$sim_id <- i
+  sim_df$sample_size <- cond$n
+  all_sim_results_noExtreme[[i]] <- sim_df
+}
+
+final_sim_data_noExtreme <- bind_rows(all_sim_results_noExtreme)
+
+# WITH injected extreme values: 
 all_sim_results <- vector("list", nrow(sim_conditions))
 
 for (i in seq_len(nrow(sim_conditions))) {
@@ -214,7 +337,7 @@ final_sim_data <- bind_rows(all_sim_results)
 # Quick checks
 # ============================
 
-# 1) Did each scenario hit ~30% positives and the correct extreme share?
+# 1) Did each scenario hit ~70% positives and the correct extreme share?
 summary_rates <- final_sim_data %>%
   group_by(sim_id, sample_size, magnitude_level, prop_extreme) %>%
   summarise(
@@ -271,16 +394,16 @@ summary(sim1$TOTEXPYY[sim1$extreme_flag==0], na.rm = TRUE)  # typical values not
 
 
 ```{r}
-# set.seed(787614)
-# sim1 <- simulate_panel_data(
-#   n               = 1000,
-#   magnitude_level = 1,
-#   prop_extreme    = 0.01,
-#   p_treated       = 0.5,
-#   target_prob     = 0.70,
-#   extreme_alloc   = "proportional",  # or "equal"
-#   exact_positives = TRUE            # << ensures ~70% overall
-# )
+set.seed(787614)
+sim1 <- simulate_panel_data(
+  n               = 1000,
+  magnitude_level = 1,
+  prop_extreme    = 0.01,
+  p_treated       = 0.5,
+  target_prob     = 0.70,
+  extreme_alloc   = "proportional",  # or "equal"
+  exact_positives = TRUE            # << ensures ~70% overall
+)
 ```  
 
 
@@ -316,14 +439,19 @@ cat("PASS extremes :", pass_ext, "\n")
 cat("PASS extreme range:", in_range, "\n")
 ```  
 
-```{r}
-# Create loop one, mean-preserved top-coding: 
+```{r save}
+saveRDS(
+  final_sim_data,
+  here::here("data_processed/final_sim_data.RDS")
+  )
 
-```
+saveRDS(
+  final_sim_data_noExtreme,
+  here::here("data_processed/final_sim_data_noExtreme.RDS")
+)
 
-```{r}
-install.packages("tpm")
-```   
+```  
+
 
 
 
