--- a/code/11_dgf.Rmd
+++ b/code/11_dgf.Rmd
@@ -77,10 +77,44 @@ saveRDS(coef_part2,
 
 coef_part2
 ``` 
-
-
-
 ```{r}
+
+library(tidyr)
+pcs_0 <- fyc |> 
+  filter(ind_post==0) |> 
+  dplyr::select(DUPERSID, pcs_pre=PCS42) |> 
+  group_by(DUPERSID) |> 
+  mutate(n=n())
+pcs_1 <- fyc |> 
+  filter(ind_post==1) |> 
+  dplyr::select(DUPERSID, pcs_post=PCS42)
+pcs_wide <- pcs_0 |> 
+  full_join(pcs_1)
+
+# Step 4: Calculate correlation between pre (time_0) and post (time_1)
+correlation <- cor(pcs_wide$time_0, pcs_wide$time_1, use = "complete.obs")
+print(correlation)
+
+pcs_wide <- tidyr::pivot_wider(
+  fyc,
+  id_cols = DUPERSID,  # replace with actual subject ID column
+  names_from = ind_post,     # replace with actual time column
+  values_from = PCS42)   # replace with actual PCS42 value column
+
+# Step 4: Calculate correlation
+correlation <- cor(pcs_wide$pre, pcs_wide$post, use = "complete.obs")
+print(correlation)
+
+# Step 2: Compute correlation
+cor(fyc_wide$PCS42.0, fyc_wide$PCS42.1, use = "complete.obs") #0.5223
+
+# correlation for MCS42: 
+cor(fyc_wide$MCS42.0, fyc_wide$MCS42.1, use="complete.obs")   # 0.4704
+
+```
+
+
+```{r simulator}
 
 # ============================
 # Two-part DiD simulator (updated)
@@ -113,7 +147,7 @@ simulate_panel_data <- function(
   target_prob = 0.70,       # overall Pr(ind_gt0==1)
   sigma_u = 0.5,            # SD random intercept (person)
   sigma_e = 0.3,            # residual SD for log(TOTEXPYY)
-  rho = 0.8,                # pre/post corr for PCS42
+  rho = 0.5,                # pre/post corr for PCS42
   extreme_alloc = c("proportional","equal"), # spread scheme across cells (in expectation)
   fill_zero_for_negative = TRUE,   # if TRUE, set TOTEXPYY=0 when ind_gt0==0
   exact_positives = TRUE           # if TRUE, hit 70% exactly (up to rounding)
@@ -142,6 +176,12 @@ simulate_panel_data <- function(
   pcs   <- MASS::mvrnorm(n, mu = c(50, 50), Sigma = Sigma)
   PCS42 <- as.vector(t(pcs))        # interleave pre, post
   zPCS  <- (PCS42 - 50) / 10        # standardize to avoid huge non-extreme values
+  
+    # ----- Time-varying MCS42 with pre/post correlation -----
+  # Sigma <- matrix(c(1, rho, rho, 1), 2, 2)
+  mcs   <- MASS::mvrnorm(n, mu = c(50, 50), Sigma = Sigma)
+  MCS42 <- as.vector(t(mpcs))        # interleave pre, post
+  zMCS  <- (MCS42 - 50) / 10        # standardize to avoid huge non-extreme values
 
   # ----- Random intercept per person -----
   u_i <- rnorm(n, 0, sigma_u)
@@ -173,7 +213,7 @@ simulate_panel_data <- function(
       coef_part1["ind_tx:ind_post"]*(ind_post*ind_tx) +
       coef_part1["ind_female"]*ind_female +
       coef_part1["HISPANX"]*HISPANX + 
-      coef_part1["PCS42"]*PCS42 + 
+      coef_part1["zPCS42"]*zPCS + 
       coef_part1["MCS42"]*MCS42
   
   
@@ -218,8 +258,15 @@ simulate_panel_data <- function(
   # ----- Part 2: Continuous outcome (on positives) -----
   # lp_cont <- 7 + 0.4*ind_post + 0.6*ind_tx + 0.15*zPCS + 
   #            0.2*ind_female - 0.1*HISPANX + u
-  lp_cont <- 7 + 0.4*ind_post + 0.6*ind_tx + 0.15*zPCS + 
-             0.2*ind_female - 0.1*HISPANX
+    lp_cont <- 7 + 
+    coef_part2["ind_post"]*ind_post + 
+    coef_part2["ind_tx"]*ind_tx + 
+    coef_part2["ind_tx:ind_post"]*(ind_tx*ind_post) + 
+    coef_part2["ind_female"]*ind_female + 
+    coef_part2["HISPANX"]*HISPANX + 
+    coef_part2["zPCS42"]*zPCS + 
+    coef_part2["zMCS42"]*zMCS
+  
   eps_e <- rnorm(N, 0, sigma_e)
   log_TOT <- lp_cont + eps_e
 
